<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PDF Converter</string>
    <string name="title" translatable="false">PDF Actions</string>
    <string name="app_id_admob" translatable="false">ca-app-pub-5141365365473076~1467241406</string>
    <string name="banner_id_admob" translatable="false">ca-app-pub-5141365365473076/6382340946</string>
    <string name="interstial_id_admob" translatable="false">ca-app-pub-5141365365473076/8361621117</string>
    <string name="native_id_admob" translatable="false">ca-app-pub-5141365365473076/9874029242</string>
    <string name="file_name_text" translatable="false">File Name</string>
    <string name="password_protect_pdf_text" translatable="false">Password Protect PDF</string>
    <string name="edit_images_text" translatable="false">Edit Images</string>
    <string name="open_pdf_text" translatable="false">Open PDF</string>
    <string name="create_pdf_text" translatable="false">Create PDF</string>
    <string name="details" translatable="false"><b>Details</b></string>
    <string name="search_hint" translatable="false">Name of file</string>
    <string name="search" translatable="false">search</string>
    <string name="default_content_description" translatable="false">no description</string>
    <string name="prompt_input" translatable="false">Enter here</string>
    <string-array name="array_page_sizes_b0_b10" translatable="false">
        <item>B0 (1000 x 1414 mm)</item>
        <item>B1 (707 x 1000 mm)</item>
        <item>B2 (500 x 707 mm)</item>
        <item>B3 (353 x 500 mm)</item>
        <item>B4 (250 x 353 mm)</item>
        <item>B5 (176 x 250 mm)</item>
        <item>B6 (125 x 176 mm)</item>
        <item>B7 (88 x 125 mm)</item>
        <item>B8 (62 x 88 mm)</item>
        <item>B9 (44 x 62 mm)</item>
        <item>B10 (31 x 44 mm)</item>
    </string-array>
    <string-array name="array_page_sizes_a0_b10" translatable="false">
        <item>A0 (841 x 1189 mm)</item>
        <item>A1 (594 x 841 mm)</item>
        <item>A2 (420 x 594 mm)</item>
        <item>A3 (297 x 420 mm)</item>
        <item>A4 (210 x 297 mm)</item>
        <item>A5 (148 x 210 mm)</item>
        <item>A6 (105 x 148 mm)</item>
        <item>A7 (74 x 105 mm)</item>
        <item>A8 (52 x 74 mm)</item>
        <item>A9 (37 x 52 mm)</item>
        <item>A10 (26 x 37 mm)</item>
    </string-array>
    <string-array name="fontStyles" translatable="false">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>UNDERLINE</item>
        <item>STRIKETHRU</item>
        <item>BOLDITALIC</item>
    </string-array>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="txt_type" translatable="false">text/*</string>
    <string name="bundleKey" translatable="false">ImageUri</string>
    <string name="whatsappToast" translatable="false">Sorry! Images could not be added. Please select the images from our **Select Images** option.</string>
    <string name="create_pdf" translatable="false">Create PDF</string>
    <string name="qr_barcode_pdf" translatable="false">QR &amp; Barcodes</string>
    <string name="viewFiles" translatable="false">View Files</string>
    <string name="share" translatable="false">Share</string>
    <string name="images_to_pdf" translatable="false">Images to PDF</string>
    <string name="page_color" translatable="false">Page Color</string>
    <string name="filter_images_Text" translatable="false">Filter Images \n</string>
    <string name="preview_image_to_pdf" translatable="false">Preview PDF</string>
    <string name="choose_page_number_style" translatable="false">Choose Page Number Style</string>
    <string name="show_pg_num" translatable="false">Show page numbers</string>
    <string name="page_x_of_n" translatable="false">Page X of N</string>
    <string name="page_x" translatable="false">X of N</string>
    <string name="x" translatable="false">X</string>
    <string name="arrow_up" translatable="false">Arrow Up</string>
    <string name="arrow_down" translatable="false">Arrow Down</string>
    <string name="rearrange_images" translatable="false">Rearrange Images</string>
    <string name="rearrange_text" translatable="false">Rearrange</string>
    <string name="images_rearranged" translatable="false">Images rearranged</string>
    <string name="snackbar_undoAction" translatable="false">Undo</string>
    <string name="pdf_does_not_exist_message" translatable="false">The PDF doesn\'t exist.</string>
    <string name="image_rearranging_options" translatable="false">Image Rearranging Options</string>
    <string name="filter_file_name" translatable="false">%s_%s.jpg</string>
    <string name="compress_image" translatable="false">Image compression : %s %%</string>
    <string name="quality_image" translatable="false">Enter % compression of image :</string>
    <string name="invalid_entry" translatable="false">Invalid Entry</string>
    <string name="compress_dialog_enter_prompt" translatable="false">Enter here</string>
    <string name="compress_dialog_percentage" translatable="false">%</string>
    <string name="set_as_default" translatable="false">Set as default</string>
    <string name="add_margins" translatable="false">Add Margins</string>
    <string name="top" translatable="false">Top</string>
    <string name="bottom" translatable="false">Bottom</string>
    <string name="right" translatable="false">Right</string>
    <string name="left" translatable="false">Left</string>
    <string name="border" translatable="false">Add Image Border</string>
    <string name="border_dialog_title" translatable="false">Border width : %d</string>
    <string name="border_width_prompt" translatable="false">Enter border width units</string>
    <string name="image_scale_type" translatable="false">Set Image Scale Type</string>
    <string name="stretch_image" translatable="false">Stretch image to fit on page</string>
    <string name="maintain_aspect_ratio" translatable="false">Maintain aspect ratio of images</string>
    <string name="scan_qrcode" translatable="false">Scan QR code</string>
    <string name="scan_barcode" translatable="false">Scan Barcode</string>
    <string name="qrbarcodes_to_pdf" translatable="false">Create PDF from QR &amp; Barcode</string>
    <string name="scan_cancelled" translatable="false">Cancelled Scan by user</string>
    <string name="snackbar_no_images" translatable="false">No Images selected</string>
    <string name="snackbar_no_pdfs_selected" translatable="false">No PDFs selected</string>
    <string name="snackbar_name_not_blank" translatable="false">Name cannot be blank</string>
    <string name="no_permissions" translatable="false">Please provide storage permissions to view your files.</string>
    <string name="prompt_give_permission" translatable="false">Provide permissions</string>
    <string name="snackbar_images_added" translatable="false">Images added</string>
    <string name="snackbar_file_renamed" translatable="false">File renamed.</string>
    <string name="snackbar_file_not_renamed" translatable="false">File can\'t be renamed.</string>
    <string name="snackbar_file_deleted" translatable="false">File deleted.</string>
    <string name="snackbar_file_not_deleted" translatable="false">File can\'t be deleted.</string>
    <string name="snackbar_folder_not_created" translatable="false">Error on creating application folder.</string>
    <string name="pdf_merged" translatable="false">PDFs Merged</string>
    <string name="error_path_not_found" translatable="false">Sorry, we are unable to access the file at this location</string>
    <string name="creating_pdf" translatable="false">Creating PDF</string>
    <string name="creating_txt" translatable="false">Creating Text File</string>
    <string name="enter_file_name" translatable="false">Enter file name</string>
    <string name="example" translatable="false">Example : abc</string>
    <string name="snackbar_no_pdf_app" translatable="false">No app to read PDF File</string>
    <string name="open_file" translatable="false">Open File</string>
    <string name="set_password" translatable="false">Set Password</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="snackbar_password_cannot_be_blank" translatable="false">Password cannot be blank</string>
    <string name="cannot_add_password" translatable="false">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="snackbar_imagecropped" translatable="false">Images cropped</string>
    <string name="cropImage_activityTitle" translatable="false">Crop Image</string>
    <string name="snackbar_pdfCreated" translatable="false">PDF created!</string>
    <string name="error_uri_not_found" translatable="false">Sorry, We are unable to access the cropped image. Please try again</string>
    <string name="snack_bar_empty_txt_in_pdf" translatable="false">The chosen PDF has no text to extract!</string>
    <string name="snackbar_txtExtracted" translatable="false">Text extracted!</string>
    <string name="snackbar_pdfselected" translatable="false">PDF file selected!</string>
    <string name="snackbar_viewAction" translatable="false">View</string>
    <string name="more_options_text" translatable="false">More Options</string>
    <string name="snackbar_no_duplicate_pdf" translatable="false">Duplicate pages not found.No new PDF created.</string>
    <string name="snackbar_duplicate_removed" translatable="false">A new PDF is created after removal of duplicate pages.</string>
    <string name="snackbar_invert_unsuccessful" translatable="false">The PDF could not be inverted</string>
    <string name="snackbar_invert_successfull" translatable="false">Inverted</string>
    <string name="snackbar_color_too_close" translatable="false">Your font color and background color are too similar</string>
    <string name="excel_selected" translatable="false">Excel file selected</string>
    <string name="excel_to_pdf" translatable="false">Excel to PDF</string>
    <string name="excel_tv_view_text" translatable="false">Excel file selected: </string>
    <string name="select_excel_file" translatable="false">Select Excel file</string>
    <string name="share_chooser" translatable="false">Select app to send message…</string>
    <string name="rate_us_text" translatable="false">Hi! I just checked this app in playstore. Try it out : https://play.google.com/store/apps/details?id=androidmarket . It converts images to PDF so smoothly. :)</string>
    <string name="snackbar_no_share_app" translatable="false">No application to share.</string>
    <string name="images_selected" translatable="false"> %1$d image(s) selected.</string>
    <string name="feedback_subject" translatable="false">Suggestions for Images To PDF Converter</string>
    <string name="feedback_text" translatable="false">Kindly write your precious feedback, or just drop a Hi! :)</string>
    <string name="no_pdf" translatable="false">No PDFs to show</string>
    <string name="get_started" translatable="false">Get Started Now</string>
    <string name="view_files_text" translatable="false">View all your converted files here!</string>
    <string name="empty_image_description" translatable="false">No Pdfs</string>
    <string name="enter_password_custom" translatable="false">Enter Password</string>
    <string name="example_pass_123" translatable="false">pass@123</string>
    <string name="remove_dialog" translatable="false">REMOVE</string>
    <string name="file_date_text" translatable="false">File Date</string>
    <string name="file_size_text" translatable="false">File Size</string>
    <string name="pdf_files_will_appear_here_after_you_create_any" translatable="false">PDF files will appear here\n after you create any.</string>
</resources>