<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/color_excel_pdf"
    app:cardCornerRadius="10dp"
    tools:ignore="Overdraw">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/shape_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:weightSum="100"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.MainActivity">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/fileRipple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fileName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:maxLines="1"
                    android:ellipsize="marquee"
                    android:text="@string/file_name_text"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fileSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/file_size_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/encryptionImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/default_content_description"
                    app:srcCompat="@drawable/baseline_enhanced_encryption_24"
                    app:tint="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/fileDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="7dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/file_date_text"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
