<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/gr_img_pdf" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/shape_bg" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_back" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_b"
                        android:text="QR to PDF"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="25.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_reg"
                        android:letterSpacing="0.1"
                        android:text="Create PDF from QR Codes"
                        android:textAllCaps="true"
                        android:textColor="#FFF"
                        android:textSize="12.0sp" />

                </LinearLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gr_white_tr"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".QrBarcodeScanFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="3dp"
                    android:padding="5sp"
                    android:text="@string/qrbarcodes_to_pdf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.androidmarket.pdfcreator.custom.MyCardView
                        android:id="@+id/scan_qrcode"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="7.5dp"
                        android:layout_weight="1.0"
                        app:option_icon="@drawable/ic_qrcode_24dp"
                        app:option_text="@string/scan_qrcode" />

                    <com.androidmarket.pdfcreator.custom.MyCardView
                        android:id="@+id/scan_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        app:option_icon="@drawable/ic_barcode_24dp"
                        app:option_text="@string/scan_barcode" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/nativeAdFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="300dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="3dp"
                        android:padding="5sp"
                        android:text="Ad"
                        android:background="#FFC107"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />


                </FrameLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>