<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gr_img_pdf"
    android:orientation="vertical"
    tools:context=".fragment.ImageToPdfFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/shape_bg" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_b"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="25.0sp" />

                <TextView
                    android:id="@+id/titleTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_reg"
                    android:letterSpacing="0.1"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="12.0sp" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gr_white_tr"
            android:padding="10dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RelativeLayout
                        android:id="@+id/emptyStatusView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/emptyTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/roboto_b"
                            android:text="No Files Found"
                            android:textAllCaps="false"
                            android:textColor="#000"
                            android:textSize="25.0sp" />

                        <TextView
                            android:id="@+id/emptyTitleTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/emptyTitle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_reg"
                            android:gravity="center"
                            android:letterSpacing="0.1"
                            android:text="@string/pdf_files_will_appear_here_after_you_create_any"
                            android:textAllCaps="true"
                            android:textColor="#000"
                            android:textSize="12.0sp" />


                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/filesRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:visibility="visible" />

                        <FrameLayout
                            android:id="@+id/nativeAdFrameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                </RelativeLayout>


            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/no_permissions_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_permissions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:text="@string/no_permissions"
            android:textSize="20sp" />

        <Button
            android:id="@+id/provide_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:padding="10dp"
            android:text="@string/prompt_give_permission"
            android:textSize="18sp" />

    </RelativeLayout>

</FrameLayout>
